# pack-wix-msi-cross-install-detection

./: CMakeLists.txt  Product.wxs  README.md  build-app.ps1  build-msi.ps1
